# guidebook-plan

./: .gitignore  Cargo.toml  README.md  justfile
scripts/: publish.sh
src/: app.rs  main.rs
src/commands/: command_clone.rs  command_init.rs  command_open.rs  command_push.rs  command_show.rs  mod.rs
src/model/: day_of_week.rs  mod.rs  plan.rs  routine.rs
src/util/: cprintln.rs  mod.rs  time_cursor.rs
